improvements for executables